# cipollino

./: .gitignore  .gitmodules  Cargo.toml  build.rs  roadmap.md  types.toml
crates/cipollino/: Cargo.toml  build.rs  types.toml
crates/cipollino/src/: editor.rs  main.rs
crates/cipollino/src/audio/: generate.rs  mod.rs  state.rs
crates/cipollino/src/editor/: clipboard.rs  dialog.rs  dropped_files.rs  keybind.rs  mod.rs  new_project.rs  prefs.rs  selection.rs  splash_screen.rs  state.rs  toasts.rs
crates/cipollino/src/editor/prefs/: mod.rs  prefs_dialog.rs
crates/cipollino/src/export/: export_options.rs  export_progress.rs  mod.rs  video_writer.rs
crates/cipollino/src/panels/: assets.rs  colors.rs  mod.rs  scene.rs  timeline.rs  tool.rs
crates/cipollino/src/panels/assets/: graphic_dialogs.rs  mod.rs
crates/cipollino/src/panels/scene/: mod.rs  overlay.rs
crates/cipollino/src/panels/timeline/: controls.rs  frame_area.rs  header.rs  layers.rs  mod.rs
crates/cipollino/src/panels/tools/: bucket.rs  mod.rs  pencil.rs  select.rs
crates/cipollino/src/project/: action.rs  folder.rs  frame.rs  graphic.rs  layer.rs  mod.rs  obj.rs  palette.rs  saveload.rs  sound_instance.rs  stroke.rs
crates/cipollino/src/project/file/: audio.rs  mod.rs
crates/cipollino/src/project/resource/: mod.rs
crates/cipollino/src/project/saveload/: load.rs  mod.rs  save.rs
crates/cipollino/src/renderer/: fb.rs  mesh.rs  shader.rs
crates/cipollino/src/renderer/scene/: fb_manager.rs  meshgen.rs  mod.rs
crates/cipollino/src/tools/: bucket.rs  color_picker.rs  line.rs  mod.rs  pencil.rs  state_machine.rs
crates/cipollino/src/tools/scissors/: cut.rs  mod.rs  neutral.rs
crates/cipollino/src/tools/select/: free_transform.rs  lasso.rs  mod.rs  rotate.rs  scale.rs  translate.rs
crates/cipollino/src/util/: bson.rs  color.rs  curve.rs  ffmpeg.rs  fs.rs  geo.rs  mod.rs  ui.rs
crates/cipollino/src/util/ui/: color.rs  dnd.rs  keybind.rs  layout.rs  mod.rs  path.rs
(+68 files in other folders)
