[package]
name = "cipollino"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"

eframe = "0.23.0"
egui = "0.23.0"
egui_dock = {version = "0.8.2", features = ["serde"]}
egui_glow = "0.23.0"
env_logger = "0.10"
glow = "0.12"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
