[package]
name = "cipollino"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
eframe = "0.23.0"
egui = "0.23.0"
egui_dock = {version = "0.8.2", features = ["serde"]}
egui_glow = "0.23.0"
env_logger = "0.10"
glam = {version = "0.24.2", features = ["serde"]}
glow = "0.12"
image = "0.24.7"
rfd = "0.12.1"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
egui-phosphor = "=0.3.0"
intersection_detection = "0.1.3"
rgeometry = "0.9.0"
rand = "0.8.5"
project_macros = { path = "../project_macros" }
egui-toast = "0.9.0"

[build-dependencies]
cc = "1.0"
