[package]
name = "cipollino"
description = "2D Animation Program"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
eframe = "0.26.0"
egui = "0.26.0"
egui_dock = {version = "0.11.0", features = ["serde"]}
egui_glow = "0.26.0"
env_logger = "0.10"
glam = {version = "0.24.2", features = ["serde"]}
glow = "0.13"
image = "0.24.7"
rfd = "0.12.1"
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
egui-phosphor = "=0.3.0"
intersection_detection = "0.1.3"
rgeometry = "0.9.0"
rand = "0.8.5"
project_macros = { path = "../project_macros" }
egui-toast = "0.12.0"
cpal = "0.15.2"
sha2 = "0.10"
minimp3_fixed = "0.5.4"
pathdiff = "0.2.1"
wav = "1.0.0"
unique-type-id = "1.3.0"
egui_extras = {version = "*", features = ["all_loaders"]}
bson = "2.9.0"
walkdir = "2.5.0"
include-lines = "1.1.2"

[build-dependencies]
cc = "1.0"
walkdir = "2.5.0"